@@ -22,6 +22,7 @@
 
     </en> </comments>
     <printers>
+	<printer><id>printer/Minolta-magicolor_2430_DL</id></printer>
 	<printer><id>printer/Minolta-magicolor_2300_DL</id></printer>
 	<printer><id>printer/Minolta-magicolor_2200_DL</id></printer>
 	<printer><id>printer/Minolta-Color_PageWorks_Pro_L</id></printer>
