@@ -22,6 +22,12 @@
 	</constraint>
 	<constraint sense="true">
 	    <make>Minolta</make>
+	    <model>magicolor 2430 DL</model>
+	    <driver>foo2zjs</driver>
+	    <arg_defval>ev/foo2zjs-ICM-DL2312</arg_defval>
+	</constraint>
+	<constraint sense="true">
+	    <make>Minolta</make>
 	    <model>magicolor 2300 DL</model>
 	    <driver>foo2zjs</driver>
 	    <arg_defval>ev/foo2zjs-ICM-DL2312</arg_defval>
@@ -53,6 +59,9 @@
 		    <driver>foo2zjs</driver>
 	        </constraint>
 	        <constraint sense="true">
+	    	    <printer>Minolta-magicolor_2430_DL</printer>
+	        </constraint>
+	        <constraint sense="true">
 	    	    <printer>Minolta-magicolor_2300_DL</printer>
 	        </constraint>
 	    </constraints>
@@ -66,6 +75,9 @@
 	    <constraints>
 	        <constraint sense="false">
 		    <driver>foo2zjs</driver>
+	        </constraint>
+	        <constraint sense="true">
+	    	    <printer>Minolta-magicolor_2430_DL</printer>
 	        </constraint>
 	        <constraint sense="true">
 	    	    <printer>Minolta-magicolor_2300_DL</printer>
