@@ -30,6 +30,9 @@
 		    <printer>Minolta-magicolor_2300_DL</printer>
 		</constraint>
 		<constraint sense="false">
+		    <printer>Minolta-magicolor_2430_DL</printer>
+		</constraint>
+		<constraint sense="false">
 		    <printer>Minolta-Color_PageWorks_Pro_L</printer>
 		</constraint>
 	    </constraints>
@@ -47,6 +50,9 @@
 		</constraint>
 		<constraint sense="true">
 		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+		<constraint sense="true">
+		    <printer>Minolta-magicolor_2430_DL</printer>
 		</constraint>
 	    </constraints>
 	</enum_val>
@@ -73,6 +79,9 @@
 		</constraint>
 		<constraint sense="false">
 		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+		<constraint sense="false">
+		    <printer>Minolta-magicolor_2430_DL</printer>
 		</constraint>
 		<constraint sense="false">
 		    <printer>Minolta-Color_PageWorks_Pro_L</printer>
@@ -104,6 +113,9 @@
 		    <printer>Minolta-magicolor_2300_DL</printer>
 		</constraint>
 		<constraint sense="false">
+		    <printer>Minolta-magicolor_2430_DL</printer>
+		</constraint>
+		<constraint sense="false">
 		    <printer>Minolta-Color_PageWorks_Pro_L</printer>
 		</constraint>
 	    </constraints>
@@ -118,6 +130,9 @@
 		</constraint>
 		<constraint sense="true">
 		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+		<constraint sense="true">
+		    <printer>Minolta-magicolor_2430_DL</printer>
 		</constraint>
 	    </constraints>
 	</enum_val>
@@ -149,6 +164,9 @@
 		</constraint>
 		<constraint sense="false">
 		    <printer>Minolta-magicolor_2300_DL</printer>
+		</constraint>
+		<constraint sense="false">
+		    <printer>Minolta-magicolor_2430_DL</printer>
 		</constraint>
 		<constraint sense="false">
 		    <printer>Minolta-Color_PageWorks_Pro_L</printer>
