@@ -84,6 +84,11 @@
 	        </constraint>
 	        <constraint sense="true">
 		    <driver>foo2zjs</driver>
+	    	    <make>Minolta</make>
+	    	    <model>magicolor 2430 DL</model>
+	        </constraint>
+	        <constraint sense="true">
+		    <driver>foo2zjs</driver>
 	    	    <make>Generic</make>
 	    	    <model>GDI Printer</model>
 	        </constraint>
