@@ -1,0 +1,56 @@
+<printer id="printer/Minolta-magicolor_2430_DL">
+    <make>Minolta</make>
+    <model>magicolor 2430 DL</model>
+    <mechanism>
+	<laser/>
+	<color/>
+	<resolution>
+	    <dpi>
+		<x>2400</x>
+		<y>600</y>
+	    </dpi>
+	</resolution>
+	<margins>
+	    <general>
+		<unit>mm</unit>
+		<top>4</top>
+		<bottom>4</bottom>
+		<left>4</left>
+		<right>4</right>
+	    </general>
+	</margins>
+	<consumables>
+	    <comments> <en>
+		Toner Black (4500 prints) - $79
+		Toner Yellow (4500 prints) - $119
+		Toner Magenta (4500 prints) - $119
+		Toner Cyan (4500 prints) - $119
+		Waste Toner Box (25000 prints) - $19
+		OPC Drum Catridge (45000 prints) - $149
+	    </en> </comments>
+	    <partno>1710517-005</partno>
+	    <partno>1710517-006</partno>
+	    <partno>1710517-007</partno>
+	    <partno>1710517-008</partno>
+	    <partno>1710522-001</partno>
+	    <partno>1710520-001</partno>
+	</consumables>
+    </mechanism>
+    <url>http://www.minolta-qms.com/products/color/mc2430DL/index.asp</url>
+    <lang>
+	<proprietary/>
+	<!--no pjl--><!--No "text"?-->
+    </lang>
+    <autodetect>
+    </autodetect>
+    <functionality>B</functionality>
+    <driver>foo2zjs</driver>
+    <unverified/><!--no "contrib_url"-->
+    <comments> <en>
+
+	The magicolor 2430 DL is supported by the foo2zjs free
+	software printer driver (similar to the 2300 DL). Ethernet and
+	USB 2.0 connection.
+
+    </en> </comments>
+</printer>
