@@ -1,3 +1,9 @@
+2005-02-11  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Minolta-magicolor_2430_DL.xml, driver/foo2zjs.xml,
+	  opt/foo2zjs-PrinterType.xml, opt/foo2zjs-InputSlot.xml,
+	  opt/foo2zjs-ICM.xml: Added the Minolta magicolor 2430 DL.
+
 2005-02-10  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* driver/pxl1010.xml, opt/2.xml, opt/PCL-XL-InputSlot.xml: Added
